# kinomania-main

./: CMakeLists.txt  CMakeSettings.json  README.md
include/: Application.hpp  Database.hpp
include/UI/: AuthWindow.hpp  ContentDetails.hpp  MainWindow.hpp
src/: Application.cpp  MainWindow.cpp  database.cpp  main.cpp
src/UI/: AuthWindow.cpp  ContentDetails.cpp  ContentDetails.hpp  MainWindow.cpp
